--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,7 +3,7 @@ app:
   version: v4
   port: 80
 image:
-  name: denvasyliev/k8sdiy
+  name: ekasyan/go-demo-app
   tag: build-599e1af
 front:
   version: 3.0.1
